# aigie-demo-app

./: .gitignore  COMPATIBILITY_FIXES_SUMMARY.md  CONSOLIDATION_SUMMARY.md  ENHANCED_AIGIE_README.md  GEMINI_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MIGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py  setup_gemini.py
examples/: aigie_config_template.json  basic_usage.py  enhanced_aigie_demo.py  enhanced_usage.py  pydantic_compatibility_example.py  unified_pydantic_example.py
src/aigie/: __init__.py  advanced_proactive_remediation.py  ai_code_generator.py  aigie_node.py  aigie_state_graph.py  enhanced_error_taxonomy.py  enhanced_policy_node.py  error_taxonomy.py  gemini_remediator.py  pydantic_compatible_graph.py  state_adapter.py
src/aigie_demo_app/: __init__.py  aigie_state_graph.py  main.py  state_graph_wrapper.py
tests/: __init__.py  test_enhanced_features.py  test_main.py
