# filepath: /Users/gal/Desktop/aigie-demo-app/pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigie"
version = "0.1.0"
description = "The Package that fixes you AI world"
authors = [
    {name = "AG", email = "support@aigie.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "tenacity",
    "langchain-core", 
    "langgraph",
    "google-cloud-logging"
]

[project.urls]
Homepage = "https://github.com/yourusername/aigie-demo-app"
Repository = "https://github.com/yourusername/aigie-demo-app.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aigie*"]
