# filepath: /Users/gal/Desktop/aigie-demo-app/pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigie"
version = "0.5.2"
description = "The Package that fixes your AI world with Trail Taxonomy error classification and Gemini AI remediation"
authors = [
    {name = "AG", email = "support@aigie.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "tenacity",
    "langchain-core", 
    "langgraph",
    "google-cloud-logging",
    "google-cloud-aiplatform"
]
keywords = ["ai", "error-handling", "langgraph", "gemini", "trail-taxonomy", "remediation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yourusername/aigie-demo-app"
Repository = "https://github.com/yourusername/aigie-demo-app.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aigie*"]
